add texture mapping

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
       <canvas id="canvas"></canvas>
       <canvas id="canvas2"></canvas>
     </div>
-    <script src="index.js" type="module"></script>
+    <script src="./src/index.js" type="module"></script>
   </body>
 </html>
