--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
       body {
         margin: 0;
         padding: 0;
-        /* background: #002976; */
-      }
-      #canvas2 {
-        position: fixed;
-        top: 0;
-        left: 0;
+        overflow: hidden;
       }
       #canvas {
         width: 100vw;
@@ -24,7 +19,6 @@
     </style>
     <div id="app">
       <canvas id="canvas"></canvas>
-      <canvas id="canvas2"></canvas>
     </div>
     <script src="./src/index.js" type="module"></script>
   </body>
