--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       body {
         margin: 0;
         padding: 0;
-        overflow: hidden;
+        /* overflow: hidden; */
       }
       #canvas {
         width: 100vw;
@@ -18,7 +18,7 @@
       }
     </style>
     <div id="app">
-      <canvas id="canvas"></canvas>
+      <canvas  id="canvas"></canvas>
     </div>
     <script src="./src/index.js" type="module"></script>
   </body>
