--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         /* overflow: hidden; */
       }
       #canvas {
-        width: 100vw;
-        height: 100vh;
+        width: 500;
+        height: 500;
       }
     </style>
     <div id="app">
